# lab_rust_app

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  init.sql  log_config.yml
src/: config.rs  main.rs  state.rs
src/database/: auth_db.rs  connection.rs  mod.rs  user_db.rs
src/handler/: auth_handler.rs  certify_handler.rs  error_handler.rs  health_check_handler.rs  mod.rs  user_handler.rs
src/model/auth/: auth_model.rs
src/model/user/: user_model.rs
src/route/auth/: auth_cfg.rs  mod.rs
src/route/health_check/: health_check_cfg.rs  mod.rs
src/route/user/: mod.rs  user_cfg.rs
