[package]
name = "lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#Actix web framework and run-time
actix-web = "4.4.0"
actix-rt = "2.7.0"

#Environment variable access libraries
dotenv = "0.15.0"

#MySql access library
sqlx = {version = "0.6.2", default_features = false, features = ["mysql","runtime-tokio-native-tls", "macros","chrono"]}

# Data serialization librar
serde = { version = "1.0.144", features = ["derive"] }

# Data Log
log = "0.4"
log4rs = "1.0.0"

# Other utils
chrono = {version = "0.4.22", features = ["serde"]}

# Openssl for build (if openssl is not already installed on the dev server)
openssl = { version = "0.10.41", features = ["vendored"] }

scrypt = "0.9.0"

strum = "0.26"
strum_macros = "0.26"

jsonwebtoken = "8.0.1"